# electronics_network_platform

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: urls.py
config/: settings.py  urls.py
network_platform/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
network_platform/migrations/: 0001_initial.py  0002_rename_contacts_electronicsfactory_contact_and_more.py  0003_rename_provider_from_factory_retailnetwork_provider_factory.py  0004_alter_contact_number_home.py
network_platform/tests/: conftest.py  test_factory.py  test_retail.py  test_trader.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_staff.py
users/tests/: conftest.py  test_user.py
